--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,13 +36,31 @@ jobs:
             | docker login --username AWS \
               --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com
 
-      - name: Build Flask API image
-        run: docker build -t text-api ./flask-api
-
-      - name: Tag Flask API image
+      - name: Build and push Flask API image
         run: |
-          docker tag text-api:latest \
-            ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPO_FLASK_API }}:latest
+          docker build -t ${{ secrets.ECR_REPO_FLASK_API }} ./flask-api
+          docker tag ${{ secrets.ECR_REPO_FLASK_API }}:latest ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPO_FLASK_API }}:latest
+          docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPO_FLASK_API }}:latest
 
-      # ... the rest of your pipeline steps
+      - name: Build and push Streamlit UI image
+        run: |
+          docker build -t ${{ secrets.ECR_REPO_STREAMLIT_UI }} ./streamlit-ui
+          docker tag ${{ secrets.ECR_REPO_STREAMLIT_UI }}:latest ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPO_STREAMLIT_UI }}:latest
+          docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPO_STREAMLIT_UI }}:latest
+
+      - name: Update Flask ECS service
+        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+        with:
+          task-definition: ecs/flask-api-task-def.json
+          service: ${{ secrets.ECS_SERVICE_FLASK }}
+          cluster: ${{ secrets.ECS_CLUSTER }}
+          wait-for-service-stability: true
+
+      - name: Update Streamlit ECS service
+        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+        with:
+          task-definition: ecs/streamlit-ui-task-def.json
+          service: ${{ secrets.ECS_SERVICE_STREAMLIT_UI }}
+          cluster: ${{ secrets.ECS_CLUSTER }}
+          wait-for-service-stability: true
 
